--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Assignment 3</h1>
-    <form action="test.html">
+    <form action="https://omk2110.github.io/Thank-you/">
         <div>
             <b><label for="FirstName">First Name:-</label></b>
             <input name="FirstName" type="text" placeholder="Omkar" required>
