--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
         <div>
             <div>
-                <input type="checkbox">
-                <label for="Laptop">I have a Laptop</label>
+                <input name="accessories" type="checkbox" value="Laptop">
+                <label for="accessories">I have a Laptop</label>
             </div>
 
             <div>
-                <input type="checkbox">
-                <label for="MobilePhone">I have a Mobile Phone</label>
+                <input name="accessories" type="checkbox" value="MobilePhone">
+                <label for="accessories">I have a Mobile Phone</label>
             </div>
             
             <div>
-                <input name="Desktop" type="checkbox" value="">
-                <label for="Desktop">I have a Desktop</label>
+                <input name="accessories" type="checkbox" value="Desktop">
+                <label for="accessories">I have a Desktop</label>
             </div>
         </div>
 
